Change style of Contacts, picture names and text size

--- a/animals.html
+++ b/animals.html
@@ -50,20 +50,20 @@
         <div class="container">
             <div class="album">
                 <img src="assets/images/blue-eyed.jpg" alt="blue-eyed kitty">
-                <h3>Blue-eyed kitty</h3>
+                 The Blue-eyed kitty 
                 <p>Oil paint on canvas, size 30x20cm. 2022.</p>
                 <hr>
             </div>
 
             <div class="album">
                 <img src="assets/images/two-cats.jpg" alt="blue-eyed kitty">
-                <h3>Two Blue-eyed kitties</h3>
+                 Two Blue-eyed kitties 
                 <p>They are two different paintings. <br> Oil paint on canvas, size 20x30cm. 2022.</p>
                 <hr>
             </div>
             <div class="album">
                 <img src="assets/images/turquoise.jpg" alt="Turquoise-eyed cat,very nice">
-                <h3>Turquoise</h3>
+                 The Turquoise
                 <p>Oil paint, canvas on cardboard, size 15x10cm. Juniva's copy of image from the Internet. Author is
                     unknown. 2022.</p>
                 <hr>
@@ -75,21 +75,21 @@
     <section class="container">
         <div class="album">
             <img src="assets/images/irbis1.jpg" alt="Snow leopard">
-            <h3>Snow leopard-1</h3>
+            The Snow leopard-1 
             <p>Acrilic paint on the old leather coat, size approx. 30x40cm. 2020.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/irbis2.jpg" alt="Snow leopard">
-            <h3>Snow leopard-2</h3>
+            The Snow leopard-2 
             <p>Acrilic paint on the old leather coat, size approx. 30x40cm. 2020.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/irbis3.jpg" alt="Snow leopard">
-            <h3>Snow leopard-3</h3>
+            The Snow leopard-3 
             <p>Acrilic paint on the old leather coat, size approx. 30x40cm. 2020.</p>
             <hr>
         </div>
@@ -102,21 +102,21 @@
 
         <div class="album">
             <img src="assets/images/lubava.jpg" alt="Lubava the kitty">
-            <h3>Lubava the kitty</h3>
+             Lubava the kitty 
             <p>Oil paint on canvas, size 40x40cm. 2020.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/ryzhik.jpg" alt="Red green-eyed cat, very nice">
-            <h3>Ryzhyk</h3>
+            The Red Cat
             <p>Oil paint on canvas, size 20x20cm. 2022.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/kitty.jpg" alt="Grey kitty">
-            <h3>Kitty</h3>
+            The Kitty 
             <p>Oil paint, canvas on cardboard, size 20x20cm. 2021.</p>
             <hr>
         </div>
@@ -129,21 +129,21 @@
 
         <div class="album">
             <img src="assets/images/bantik1.jpg" alt="White kitty with a pink bow">
-            <h3>White kitty with a pink bow</h3>
+            The White Kitty With a Pink Bow
             <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/bantik2.jpg" alt="White kitty with a pink bow-2">
-            <h3>White kitty with a pink bow-2</h3>
+            The White Kitty With a Pink Bow-2
             <p>Oil paint on canvas, size 20x20cm. 2021.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/bantik3.jpg" alt="White kitty with a pink bow-2">
-            <h3>White kitty with a pink bow-3</h3>
+            The White Kitty With a Pink Bow-3
             <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
             <hr>
         </div>
@@ -154,20 +154,20 @@
     <section class="container">
         <div class="album">
             <img src="assets/images/belka-tulip.jpg" alt="Squirrel with a tulip.">
-            <h3>Squirrel with a tulip</h3>
+            The Squirrel With a Tulip
             <p>Oil paint on canvas, size 20x30cm. 2021.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/stroboscop.jpg" alt="A cat">
-            <h3>Stop music (my kitty dances with another cat)</h3>
+            Stop music (My kitty dances with another cat)
             <p>Oil paint on canvas, size 25x35cm. 2021.</p>
             <hr>
         </div>
         <div class="album">
             <img src="assets/images/tiger18x24.jpg" alt="Tiger">
-            <h3>Tiger</h3>
+            The Tiger
             <p>Oil paint on canvas, size 18x24cm. 2021.</p>
             <hr>
         </div>
@@ -178,21 +178,21 @@
     <section class="container">
         <div class="album">
             <img src="assets/images/tigercub.jpg" alt="Tigercub">
-            <h3>Tigercub</h3>
+            The Tigercub
             <p>Oil paint on canvas, size 20x20cm. 2021. Juniva's copy of image from the Internet. Author is unknown.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/hunter15x15.jpg" alt="Kitty-hunter">
-            <h3>Kitty-hunter</h3>
+            The Kitty-hunter
             <p>Oil paint on canvas, size 15x15cm. 2021.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/hunter20x20.jpg" alt="Kitty-hunter-2">
-            <h3>Kitty-hunter-2</h3>
+            The Kitty-hunter-2
             <p>Oil paint on canvas, size 20x20cm. 2021.</p>
             <hr>
         </div>
@@ -203,21 +203,21 @@
     <section class="container">
         <div class="album">
             <img src="assets/images/kitten1.jpg" alt="Grey kitten-1">
-            <h3>Kitten-1</h3>
+            The Kitten-1
             <p>Oil paint on canvas, size 18x24cm. 2021.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/kitten2.jpg" alt="Grey kitten-2">
-            <h3>Kitten-2</h3>
+            The Kitten-2
             <p>Oil paint on canvas, size 20x30cm. 2021.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src=" assets/images/kitten3.jpg" alt="Grey kitten-3">
-            <h3>Kitten-3</h3>
+            The Kitten-3
             <p>Oil paint on canvas, size 18x24cm. 2021.</p>
             <hr>
         </div>
@@ -228,21 +228,21 @@
     <section class="container">
         <div class="album">
             <img src="assets/images/cat.jpg" alt="A cat">
-            <h3>Cat</h3>
+            The Cat
             <p>Watercolor on paper, size 30x44cm. 1982.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/ulibaka.jpg" alt="Smiling cat">
-            <h3> Smiling cat</h3>
+            The Smiling Cat
             <p>Oil paint, canvas on cardboard, size 10x15cm. 2021. Juniva's copy of image from the Internet. Author is
                 unknown.</p>
             <hr>
         </div>
         <div class="album">
             <img src="assets/images/toshka.jpg" alt="Toshka the Marmot">
-            <h3>Toshka the Marmot</h3>
+            Toshka the Marmot
             <p>Oil paint on canvas, size 15x20cm. Toshka the Marmot has own channel on <a
                     href="http://youtu.be/_9eOswLg5mQ" target="_blank" rel="noopener">Youtube</a></p>
             <hr>
@@ -255,14 +255,14 @@
 
         <div class="album">
             <img src="assets/images/belka-win.jpg" alt="Squirrel in Winter">
-            <h3>Squirrel in Winter</h3>
+            The Winter Squirrel 
             <p>Oil paint on canvas, size 35x45cm. 2022.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/red-ball.jpg" alt="Kitten with a red ball">
-            <h3>Red ball</h3>
+            The Red Ball
             <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
             <hr>
         </div>
@@ -278,14 +278,17 @@
 
     <footer class="clear contacts" id="footer">
         <div class="text-center">
-            Contact us on &nbsp;&nbsp; <i class="fa-brands fa-instagram"></i>&nbsp;<a
-                href="https://instagram.com/juniva.art" target="_blank" rel="noopener"
-                aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a> &nbsp;&nbsp;
-            <i class="fa-brands fa-twitter"></i>&nbsp;<a href="https://twitter.com/" target="_blank" rel="noopener"
-                aria-label="Go to Twitter (opens in new tab)">Twitter</a> &nbsp;&nbsp;
-            <i class="fa-brands fa-facebook"></i>&nbsp;<a href="https://facebook.com/" target="_blank" rel="noopener"
-                aria-label="Go to Facebook (opens in new tab)">Facebook</a><br><br>
-            Copyright &copy; Juniva 1981-2022.
+            Copyright &copy; Juniva 1981-2022.<br>
+            Contact us : <br>
+            Phone: 012 345 6789 | Email: juniva@juniva.net <br>
+            <a href="https://facebook.com/" target="_blank" rel="noopener"
+                aria-label="Go to Facebook (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://instagram.com/juniva.art" target="_blank" rel="noopener"
+                aria-label="Visit Juniva's page on Instagram (opens in new tab)"><i
+                    class="fa-brands fa-instagram"></i></a> &nbsp;&nbsp;
+            &nbsp;&nbsp;<a href="https://twitter.com/" target="_blank" rel="noopener"
+                aria-label="Go to Twitter (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </footer>
 
