--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section>
         <h2 class="site-idea text-center">Everyone can dance and draw...<br>
-            ...however, with varying degrees of skill. 😀<br></h2>
+            however, with varying degrees of skill. 😀<br></h2>
 
             <!--  The Flex-container idea was taken from the site https://www.w3schools.com/ -->
         <div class="flex-container-text">
@@ -219,14 +219,15 @@
 
     <footer class="clear contacts" id="footer">
         <div class="text-center">
-            Contact us on &nbsp;&nbsp; <i class="fa-brands fa-instagram"></i>&nbsp;<a
-                href="https://instagram.com/juniva.art" target="_blank" rel="noopener"
-                aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a> &nbsp;&nbsp;
-            <i class="fa-brands fa-twitter"></i>&nbsp;<a href="https://twitter.com/" target="_blank" rel="noopener"
-                aria-label="Go to Twitter (opens in new tab)">Twitter</a> &nbsp;&nbsp;
-            <i class="fa-brands fa-facebook"></i>&nbsp;<a href="https://facebook.com/" target="_blank" rel="noopener"
-                aria-label="Go to Facebook (opens in new tab)">Facebook</a><br><br>
-            Copyright &copy; Juniva 1981-2022.
+            Copyright &copy; Juniva 1981-2022.<br>
+            Contact us : <br>
+           Phone: 012 345 6789  |  Email: juniva@juniva.net <br>
+            <a href="https://facebook.com/" target="_blank" rel="noopener"
+                aria-label="Go to Facebook (opens in new tab)"><i class="fa-brands fa-facebook"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://instagram.com/juniva.art" target="_blank" rel="noopener"
+                aria-label="Visit Juniva's page on Instagram (opens in new tab)"><i class="fa-brands fa-instagram"></i></a> &nbsp;&nbsp;
+           &nbsp;&nbsp;<a href="https://twitter.com/" target="_blank" rel="noopener"
+                aria-label="Go to Twitter (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>       
         </div>
     </footer>
 
