--- a/landscapes.html
+++ b/landscapes.html
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="album clear">
                 <img src="assets/images/breakfast.jpg" alt="Picture of the table with served breakfast near the sea">
-                <h3>Breakfast at the sea</h3>
+                 Breakfast at the sea 
                 <p>Oil on canvas, size 50x50cm. 2021.</p>
 
                 <hr>
@@ -58,14 +58,14 @@
 
             <div class="album">
                 <img src="assets/images/poppy-dark.jpg" alt="Painting of red Poppies near the sea">
-                <h3>Poppies near the sea</h3>
+                 The Poppies Near the Sea 
                 <p>Oil on canvas, size 30x30cm. 2021.</p>
 
                 <hr>
             </div>
             <div class="album">
                 <img src="assets/images/rocks.jpg" alt="Painting of Rocks and the blue sea">
-                <h3>Rocks</h3>
+                The Rocks 
                 <p>Oil on laminate, size 18x19cm. 2021. By Tatyana Bukreeva's masterclass.</p>
 
                 <hr>
@@ -82,21 +82,21 @@
         <div class="container">
             <div class="album">
                 <img src="assets/images/cap1.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 1st copy">
-                <h3>Saint-Jean-Cap-Ferrat-1</h3>
+                 Saint-Jean-Cap-Ferrat-1 
                 <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
                 <hr>
             </div>
 
             <div class="album">
                 <img src="assets/images/cap2.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 2nd copy">
-                <h3>Saint-Jean-Cap-Ferrat-2</h3>
+                 Saint-Jean-Cap-Ferrat-2 
                 <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
                 <hr>
             </div>
 
             <div class="album">
                 <img src="assets/images/cap3.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 3rd copy">
-                <h3>Saint-Jean-Cap-Ferrat-3</h3>
+                 Saint-Jean-Cap-Ferrat-3 
                 <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
                 <hr>
             </div>
@@ -108,7 +108,7 @@
     <section>
         <h2 class="site-idea text-center">If you only knew where inspiration comes from...</h2>
 
-  <!--  The Flex-container idea was taken from the site https://www.w3schools.com/ -->
+        <!--  The Flex-container idea was taken from the site https://www.w3schools.com/ -->
         <div class="flex-container-text">
             <div class="flex-item-left text-justify">
                 <p>
@@ -142,20 +142,20 @@
         <div class="container">
             <div class="album">
                 <img src="assets/images/moon-mice.jpg" alt="Funny picture where mice  fly on brooms to the Cheese Moon">
-                <h3>The Cheese Moon</h3>
+                 The Cheese Moon 
                 <p>Oil on canvas, size 30x40cm. 2021.</p>
                 <hr>
             </div>
 
             <div class="album">
                 <img src="assets/images/moon-mice2.jpg" alt="Fragment of painting The Cheese Moon.">
-                <h3>Fragment of The Cheese Moon</h3>
+                The fragment of The Cheese Moon 
                 <p> Oil on canvas, size 30x40cm. 2021.</p>
                 <hr>
             </div>
             <div class="album">
-                <img src="assets/images/returning.jpg" alt="Grey kitty">
-                <h3>The Return</h3>
+                <img src="assets/images/returning.jpg" alt="The Return - spacemen have returned to the Earth">
+                 The Return 
                 <p>Oil, canvas on cardboard, size 30x40cm. 1981.</p>
                 <hr>
             </div>
@@ -169,20 +169,20 @@
             <div class="album">
                 <img src="assets/images/gurzuf.jpg"
                     alt="Nice picture of the place called Gurzuf with the sea and mountain">
-                <h3>Gurzuf</h3>
+                 Gurzuf 
                 <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
                 <hr>
             </div>
 
             <div class="album">
                 <img src="assets/images/lavender.jpg" alt="Lavender field and a country house">
-                <h3>The Lavender</h3>
+                The Lavender 
                 <p>Oil, canvas on cardboard, size 10x15cm. 2021. By Katya Fedorova's masterclass. </p>
                 <hr>
             </div>
             <div class="album">
                 <img src="assets/images/eyeof-light.jpg" alt="Abstract painting of the sailboat in the sunset">
-                <h3>The Eye of Light</h3>
+                 The Eye of Light 
                 <p>Oil on canvas, size 25x35cm. 2022. By Olga Bazanova's masterclass.</p>
                 <hr>
             </div>
@@ -194,21 +194,21 @@
     <section>
         <div class="container">
             <div class="album">
-                <img src="assets/images/yaht.jpg" alt="Yaht at dawn, the calm sea">
-                <h3>The Yaht at Dawn</h3>
+                <img src="assets/images/yaht.jpg" alt="The Yaht at dawn, the calm sea">
+                 The Yaht at Dawn 
                 <p>Oil on canvas, size 40x50cm. 2021. By Olga Bazanova's masterclass.</p>
                 <hr>
             </div>
 
             <div class="album">
                 <img src="assets/images/domik.jpg" alt="A small house in the middle of the lake">
-                <h3> A Little House</h3>
+                  The Little House 
                 <p>Oil on canvas, size 20x30cm. 2020. By Olga Bazanova's masterclass.</p>
                 <hr>
             </div>
             <div class="album">
                 <img src="assets/images/sail.jpg" alt="A sailboat at dawn">
-                <h3>The Sail</h3>
+                 The Sail 
                 <p>Oil, canvas on cardboard, size 10x15cm. 2021. By Olga Bazanova's masterclass.</p>
                 <hr>
             </div>
@@ -221,22 +221,22 @@
         <div class="container">
             <div class="album">
                 <img src="assets/images/montenegro.jpg" alt="Montenegro, Igalo bay painting">
-                <h3>Montenegro</h3>
+                 Montenegro 
                 <p>Oil on canvas, size 50x70cm. 2021. Copy of Phil Martin's picture.</p>
 
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/poppy-sunset.jpg" alt="Poppies at sunset near the sea">
-                <h3>Poppies at sunset</h3>
+                <img src="assets/images/poppy-sunset.jpg" alt="Red Poppies at sunset near the sea">
+                 The Poppies at Sunset 
                 <p>Oil, canvas on cardboard, size 30x40cm. 2021. By Olga Bazanova's masterclass.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/wave.jpg" alt="Sunlight wave in the blue sea ">
-                <h3>Wave</h3>
+                <img src="assets/images/wave.jpg" alt="Sunlit wave in the blue sea ">
+                 The Wave 
                 <p>Oil on canvas, size 40x50cm. 2008. By Vladimir Grinev's masterclass.</p>
                 <hr>
             </div>
@@ -249,22 +249,22 @@
         <div class="container">
             <div class="album">
                 <img src="assets/images/igalo.jpg" alt="Montenegro, The Igalo Bay">
-                <h3>The Igalo Bay. Montenegro</h3>
+               The Igalo Bay. Montenegro 
                 <p>Oil on canvas, size 30x40cm. 2009. Copy of Phil Martin's picture.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/kinkade-big.jpg" alt="A little house in the forest by Thomas Kinkade">
-                <h3>A little house in the forest </h3>
+                <img src="assets/images/kinkade-big.jpg" alt="A little house in the forest by Thomas Kinkade (a copy)">
+                 The little house in the forest  
                 <p>Oil paint on canvas, size 35x45cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's
                     masterclass.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src=" assets/images/kinkade-jr.jpg" alt="A little house in the forest by Thomas Kinkade">
-                <h3>A little house in the forest </h3>
+                <img src=" assets/images/kinkade-jr.jpg" alt="A little house in the forest by Thomas Kinkade (a copy)">
+                The little house in the forest  
                 <p>Oil paint on canvas, size 20x30cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's
                     masterclass.</p>
                 <hr>
@@ -278,21 +278,21 @@
         <div class="container">
             <div class="album">
                 <img src="assets/images/fujiyama.jpg" alt="Fujiyama picture">
-                <h3>Fujiyama</h3>
+                Fujiyama 
                 <p>Oil and acrilic putty on glass, size 26x44cm. 1984.</p>
                 <hr>
             </div>
 
             <div class="album">
                 <img src="assets/images/bear-mountain.png" alt="The Bear Mountain">
-                <h3> The Bear Mountain</h3>
+                The Bear Mountain 
                 <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
                 <hr>
             </div>
 
             <div class="album">
                 <img src="assets/images/cliff.jpg" alt="The Cliff and the sea">
-                <h3> The Cliff</h3>
+                  The Cliff 
                 <p>Oil, canvas on cardboard, size 10x15cm. 2021. </p>
                 <hr>
             </div>
@@ -309,14 +309,17 @@
 
     <footer class="clear contacts" id="footer">
         <div class="text-center">
-            Contact us on &nbsp;&nbsp; <i class="fa-brands fa-instagram"></i>&nbsp;<a
-                href="https://instagram.com/juniva.art" target="_blank" rel="noopener"
-                aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a> &nbsp;&nbsp;
-            <i class="fa-brands fa-twitter"></i>&nbsp;<a href="https://twitter.com/" target="_blank" rel="noopener"
-                aria-label="Go to Twitter (opens in new tab)">Twitter</a> &nbsp;&nbsp;
-            <i class="fa-brands fa-facebook"></i>&nbsp;<a href="https://facebook.com/" target="_blank" rel="noopener"
-                aria-label="Go to Facebook (opens in new tab)">Facebook</a><br><br>
-            Copyright &copy; Juniva 1981-2022.
+            Copyright &copy; Juniva 1981-2022.<br>
+            Contact us : <br>
+            Phone: 012 345 6789 | Email: juniva@juniva.net <br>
+            <a href="https://facebook.com/" target="_blank" rel="noopener"
+                aria-label="Go to Facebook (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://instagram.com/juniva.art" target="_blank" rel="noopener"
+                aria-label="Visit Juniva's page on Instagram (opens in new tab)"><i
+                    class="fa-brands fa-instagram"></i></a> &nbsp;&nbsp;
+            &nbsp;&nbsp;<a href="https://twitter.com/" target="_blank" rel="noopener"
+                aria-label="Go to Twitter (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </footer>
 
