change style of the arrow up in the footer

--- a/flowers.html
+++ b/flowers.html
@@ -127,7 +127,7 @@
     <div class="text-center">
         <p>That is all so far. 😉 </p><br>
 
-        <a href="flowers.html" aria-label="Go to the top of the page Flowers Album"> Back to the Top of the page ⬆️</a>
+        <a href="index.html" aria-label="Go to the top of the home page "><i class="fa-solid fa-arrow-up-long"></i>To the Top of the Page<i class="fa-solid fa-arrow-up-long"></i> </a>
     </div>
 
     <!--  Footer the same as on the main page -->
