--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <div class="text-center">
         <p>That is all so far. 😉 </p><br>
 
-        <a href="index.html" aria-label="Go to the top of the home page "> Back to the Top of the page ⬆️</a>
+        <a href="index.html" aria-label="Go to the top of the home page "><i class="fa-solid fa-arrow-up-long"></i>To the Top of the Page<i class="fa-solid fa-arrow-up-long"></i> </a>
     </div>
 
     <!--  Footer on main page -->
