--- a/animals.html
+++ b/animals.html
@@ -271,7 +271,7 @@
     <div class="text-center">
         <p>That is all so far. 😉 </p><br>
 
-        <a href="animals.html" aria-label="Go to the top of the page Animals Album"> Back to the Top of the page ⬆️</a>
+        <a href="index.html" aria-label="Go to the top of the home page "><i class="fa-solid fa-arrow-up-long"></i>To the Top of the Page<i class="fa-solid fa-arrow-up-long"></i> </a>
     </div>
 
     <!--  Footer the same as on the main page -->
