--- a/landscapes.html
+++ b/landscapes.html
@@ -255,7 +255,7 @@
             </div>
 
             <div class="album">
-                <img src="assets/images/kinkade-big.jpg" alt="A little house in the forest by Thomas Kinkade (a copy)">
+                <img src="assets/images/kinkade-big.jpg" alt="A little house in the forest by Thomas Kinkade (a scopy)">
                  The little house in the forest  
                 <p>Oil paint on canvas, size 35x45cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's
                     masterclass.</p>
@@ -302,8 +302,7 @@
     <div class="text-center">
         <p>That is all so far. 😉 </p><br>
 
-        <a href="landscapes.html" aria-label="Go to the top of the page Landscapes Album"> Back to the Top of the page
-            ⬆️</a>
+        <a href="index.html" aria-label="Go to the top of the home page "><i class="fa-solid fa-arrow-up-long"></i>To the Top of the Page<i class="fa-solid fa-arrow-up-long"></i> </a>
     </div>
     <!--  Footer the same as on the main page -->
 
