Add <br> after images on the  lanscapes page

--- a/landscapes.html
+++ b/landscapes.html
@@ -49,7 +49,7 @@
     <section class="clear">
         <div class="container">
             <div class="album clear">
-                <img src="assets/images/breakfast.jpg" alt="Picture of the table with served breakfast near the sea">
+                <img src="assets/images/breakfast.jpg" alt="Picture of the table with served breakfast near the sea"><br>
                  Breakfast at the sea 
                 <p>Oil on canvas, size 50x50cm. 2021.</p>
 
@@ -57,14 +57,14 @@
             </div>
 
             <div class="album">
-                <img src="assets/images/poppy-dark.jpg" alt="Painting of red Poppies near the sea">
+                <img src="assets/images/poppy-dark.jpg" alt="Painting of red Poppies near the sea"><br>
                  The Poppies Near the Sea 
                 <p>Oil on canvas, size 30x30cm. 2021.</p>
 
                 <hr>
             </div>
             <div class="album">
-                <img src="assets/images/rocks.jpg" alt="Painting of Rocks and the blue sea">
+                <img src="assets/images/rocks.jpg" alt="Painting of Rocks and the blue sea"><br>
                 The Rocks 
                 <p>Oil on laminate, size 18x19cm. 2021. By Tatyana Bukreeva's masterclass.</p>
 
@@ -81,21 +81,21 @@
 
         <div class="container">
             <div class="album">
-                <img src="assets/images/cap1.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 1st copy">
+                <img src="assets/images/cap1.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 1st copy"><br>
                  Saint-Jean-Cap-Ferrat-1 
                 <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/cap2.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 2nd copy">
+                <img src="assets/images/cap2.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 2nd copy"><br>
                  Saint-Jean-Cap-Ferrat-2 
                 <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/cap3.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 3rd copy">
+                <img src="assets/images/cap3.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 3rd copy"><br>
                  Saint-Jean-Cap-Ferrat-3 
                 <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
                 <hr>
@@ -141,20 +141,20 @@
     <section>
         <div class="container">
             <div class="album">
-                <img src="assets/images/moon-mice.jpg" alt="Funny picture where mice  fly on brooms to the Cheese Moon">
+                <img src="assets/images/moon-mice.jpg" alt="Funny picture where mice  fly on brooms to the Cheese Moon"><br>
                  The Cheese Moon 
                 <p>Oil on canvas, size 30x40cm. 2021.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/moon-mice2.jpg" alt="Fragment of painting The Cheese Moon.">
+                <img src="assets/images/moon-mice2.jpg" alt="Fragment of painting The Cheese Moon."><br>
                 The fragment of The Cheese Moon 
                 <p> Oil on canvas, size 30x40cm. 2021.</p>
                 <hr>
             </div>
             <div class="album">
-                <img src="assets/images/returning.jpg" alt="The Return - spacemen have returned to the Earth">
+                <img src="assets/images/returning.jpg" alt="The Return - spacemen have returned to the Earth"><br>
                  The Return 
                 <p>Oil, canvas on cardboard, size 30x40cm. 1981.</p>
                 <hr>
@@ -168,20 +168,20 @@
         <div class="container">
             <div class="album">
                 <img src="assets/images/gurzuf.jpg"
-                    alt="Nice picture of the place called Gurzuf with the sea and mountain">
+                    alt="Nice picture of the place called Gurzuf with the sea and mountain"><br>
                  Gurzuf 
                 <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/lavender.jpg" alt="Lavender field and a country house">
+                <img src="assets/images/lavender.jpg" alt="Lavender field and a country house"><br>
                 The Lavender 
                 <p>Oil, canvas on cardboard, size 10x15cm. 2021. By Katya Fedorova's masterclass. </p>
                 <hr>
             </div>
             <div class="album">
-                <img src="assets/images/eyeof-light.jpg" alt="Abstract painting of the sailboat in the sunset">
+                <img src="assets/images/eyeof-light.jpg" alt="Abstract painting of the sailboat in the sunset"><br>
                  The Eye of Light 
                 <p>Oil on canvas, size 25x35cm. 2022. By Olga Bazanova's masterclass.</p>
                 <hr>
@@ -194,20 +194,20 @@
     <section>
         <div class="container">
             <div class="album">
-                <img src="assets/images/yaht.jpg" alt="The Yaht at dawn, the calm sea">
+                <img src="assets/images/yaht.jpg" alt="The Yaht at dawn, the calm sea"><br>
                  The Yaht at Dawn 
                 <p>Oil on canvas, size 40x50cm. 2021. By Olga Bazanova's masterclass.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/domik.jpg" alt="A small house in the middle of the lake">
+                <img src="assets/images/domik.jpg" alt="A small house in the middle of the lake"><br>
                   The Little House 
                 <p>Oil on canvas, size 20x30cm. 2020. By Olga Bazanova's masterclass.</p>
                 <hr>
             </div>
             <div class="album">
-                <img src="assets/images/sail.jpg" alt="A sailboat at dawn">
+                <img src="assets/images/sail.jpg" alt="A sailboat at dawn"><br>
                  The Sail 
                 <p>Oil, canvas on cardboard, size 10x15cm. 2021. By Olga Bazanova's masterclass.</p>
                 <hr>
@@ -220,7 +220,7 @@
     <section>
         <div class="container">
             <div class="album">
-                <img src="assets/images/montenegro.jpg" alt="Montenegro, Igalo bay painting">
+                <img src="assets/images/montenegro.jpg" alt="Montenegro, Igalo bay painting"><br>
                  Montenegro 
                 <p>Oil on canvas, size 50x70cm. 2021. Copy of Phil Martin's picture.</p>
 
@@ -228,14 +228,14 @@
             </div>
 
             <div class="album">
-                <img src="assets/images/poppy-sunset.jpg" alt="Red Poppies at sunset near the sea">
+                <img src="assets/images/poppy-sunset.jpg" alt="Red Poppies at sunset near the sea"><br>
                  The Poppies at Sunset 
                 <p>Oil, canvas on cardboard, size 30x40cm. 2021. By Olga Bazanova's masterclass.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/wave.jpg" alt="Sunlit wave in the blue sea ">
+                <img src="assets/images/wave.jpg" alt="Sunlit wave in the blue sea "><br>
                  The Wave 
                 <p>Oil on canvas, size 40x50cm. 2008. By Vladimir Grinev's masterclass.</p>
                 <hr>
@@ -248,14 +248,14 @@
     <section>
         <div class="container">
             <div class="album">
-                <img src="assets/images/igalo.jpg" alt="Montenegro, The Igalo Bay">
+                <img src="assets/images/igalo.jpg" alt="Montenegro, The Igalo Bay"><br>
                The Igalo Bay. Montenegro 
                 <p>Oil on canvas, size 30x40cm. 2009. Copy of Phil Martin's picture.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/kinkade-big.jpg" alt="A little house in the forest by Thomas Kinkade (a scopy)">
+                <img src="assets/images/kinkade-big.jpg" alt="A little house in the forest by Thomas Kinkade (a scopy)"><br>
                  The little house in the forest  
                 <p>Oil paint on canvas, size 35x45cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's
                     masterclass.</p>
@@ -263,7 +263,7 @@
             </div>
 
             <div class="album">
-                <img src=" assets/images/kinkade-jr.jpg" alt="A little house in the forest by Thomas Kinkade (a copy)">
+                <img src=" assets/images/kinkade-jr.jpg" alt="A little house in the forest by Thomas Kinkade (a copy)"><br>
                 The little house in the forest  
                 <p>Oil paint on canvas, size 20x30cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's
                     masterclass.</p>
@@ -277,21 +277,21 @@
     <section>
         <div class="container">
             <div class="album">
-                <img src="assets/images/fujiyama.jpg" alt="Fujiyama picture">
+                <img src="assets/images/fujiyama.jpg" alt="Fujiyama picture"><br>
                 Fujiyama 
                 <p>Oil and acrilic putty on glass, size 26x44cm. 1984.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/bear-mountain.png" alt="The Bear Mountain">
+                <img src="assets/images/bear-mountain.png" alt="The Bear Mountain"><br>
                 The Bear Mountain 
                 <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/cliff.jpg" alt="The Cliff and the sea">
+                <img src="assets/images/cliff.jpg" alt="The Cliff and the sea"><br>
                   The Cliff 
                 <p>Oil, canvas on cardboard, size 10x15cm. 2021. </p>
                 <hr>
