--- a/flowers.html
+++ b/flowers.html
@@ -50,20 +50,20 @@
         <div class="container">
             <div class="album">
                 <img src="assets/images/summer-midday.jpg"
-                    alt="A Bunch of pink flowers on the window sill with a view to summer landscape">
+                    alt="A Bunch of pink flowers on the window sill with a view to summer landscape"><br>
                  The Summer Midday 
                 <p>Oil, canvas on cardboard, size 30x40cm. 2022.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/rozes.jpg" alt="Juniva at her picture with roses">
+                <img src="assets/images/rozes.jpg" alt="Juniva at her picture with roses"><br>
                  Juniva at her picture with roses. Roses. 
                 <p>Oil on canvas, size 40x50cm. 2008. By Vladimir Grinev's masterclass.</p>
                 <hr>
             </div>
             <div class="album">
-                <img src="assets/images/poppy-sunset.jpg" alt="Poppies at sunset near the sea">
+                <img src="assets/images/poppy-sunset.jpg" alt="Poppies at sunset near the sea"><br>
                The Poppies at Sunset 
                 <p>Oil, canvas on cardboard, size 30x40cm. 2021. By Olga Bazanova's masterclass.</p>
                 <hr>
@@ -76,21 +76,21 @@
     <section>
         <div class="container">
             <div class="album">
-                <img src="assets/images/buket.jpg" alt="A Bunch of field flowers, a book and apricots">
+                <img src="assets/images/buket.jpg" alt="A Bunch of field flowers, a book and apricots"><br>
                  The Summer Bouquet 
                 <p>Oil, canvas on cardboard, 35x45cm. 2020. By Olga Bazanova's masterclass.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/magnolia.jpg" alt="Three pink magnolia flowers on the tree">
+                <img src="assets/images/magnolia.jpg" alt="Three pink magnolia flowers on the tree"><br>
                 The Magnolia 
                 <p>Oil on canvas, 20x30cm. 2021.</p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/poppy-lite.jpg" alt="Poppies near the blue sea">
+                <img src="assets/images/poppy-lite.jpg" alt="Poppies near the blue sea"><br>
                The Poppies 
                 <p>Oil on canvas, 30x30cm. 2021.</p>
                 <hr>
@@ -103,20 +103,20 @@
     <section>
         <div class="container">
             <div class="album">
-                <img src="assets/images/basket-lavender.jpg" alt="The basket with lavender">
+                <img src="assets/images/basket-lavender.jpg" alt="The basket with lavender"><br>
                 The Basket with Lavender. 
                 <p>Oil, canvas on cardboard, 10x15cm. 2021. By Vugar Mamedov's masterclass. </p>
                 <hr>
             </div>
 
             <div class="album">
-                <img src="assets/images/crocus.jpg" alt="The crocus. A very nice picture in blue colors">
+                <img src="assets/images/crocus.jpg" alt="The crocus. A very nice picture in blue colors"><br>
                The Crocus 
                 <p> Oil on canvas, size 30x40cm. 2021. By Alexandr Maranov's masterclass.</p>
                 <hr>
             </div>
             <div class="album">
-                <img src="assets/images/daffodil.jpg" alt="Daffodils in the glass vase">
+                <img src="assets/images/daffodil.jpg" alt="Daffodils in the glass vase"><br>
                  The Daffodils 
                 <p>Oil, canvas on cardboard, size 25x30cm. 2022.</p>
                 <hr>
