Delete hr elements from all pages

--- a/animals.html
+++ b/animals.html
@@ -50,23 +50,23 @@
         <div class="container">
             <div class="album">
                 <img src="assets/images/blue-eyed.jpg" alt="A very nice blue-eyed kitty"><br>
-                 The Blue-eyed Kitty 
+                The Blue-eyed Kitty
                 <p>Oil paint on canvas, size 30x20cm. 2022.</p>
-                <hr>
+
             </div>
 
             <div class="album">
                 <img src="assets/images/two-cats.jpg" alt="Two very nice blue-eyed kitties"><br>
-                 Two Blue-eyed Kitties 
+                Two Blue-eyed Kitties
                 <p>They are two different paintings. <br> Oil paint on canvas, size 20x30cm. 2022.</p>
-                <hr>
+
             </div>
             <div class="album">
                 <img src="assets/images/turquoise.jpg" alt="The Turquoise-eyed cat on the turquoise background"><br>
-                 The Turquoise
+                The Turquoise
                 <p>Oil paint, canvas on cardboard, size 15x10cm. Juniva's copy of image from the Internet. Author is
                     unknown. 2022.</p>
-                <hr>
+
             </div>
         </div>
     </section>
@@ -75,23 +75,20 @@
     <section class="container">
         <div class="album">
             <img src="assets/images/irbis1.jpg" alt="The Snow leopard"><br>
-            The Snow leopard-1 
+            The Snow leopard-1
             <p>Acrilic paint on the old leather coat, size approx. 30x40cm. 2020.</p>
-            <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/irbis2.jpg" alt="The Snow leopard"><br>
-            The Snow leopard-2 
+            The Snow leopard-2
             <p>Acrilic paint on the old leather coat, size approx. 30x40cm. 2020.</p>
-            <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/irbis3.jpg" alt="The Snow leopard"><br>
-            The Snow leopard-3 
+            The Snow leopard-3
             <p>Acrilic paint on the old leather coat, size approx. 30x40cm. 2020.</p>
-            <hr>
         </div>
 
     </section><br>
@@ -102,23 +99,20 @@
 
         <div class="album">
             <img src="assets/images/lubava.jpg" alt="Lubava the kitty with blue eyes"><br>
-             Lubava the kitty 
+            Lubava the kitty
             <p>Oil paint on canvas, size 40x40cm. 2020.</p>
-            <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/ryzhik.jpg" alt="The Red green-eyed cat, very nice"><br>
             The Red Cat
             <p>Oil paint on canvas, size 20x20cm. 2022.</p>
-            <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/kitty.jpg" alt="The Grey kitty near the flowers and an apple"><br>
-            The Kitty 
+            The Kitty
             <p>Oil paint, canvas on cardboard, size 20x20cm. 2021.</p>
-            <hr>
         </div>
 
     </section><br>
@@ -131,21 +125,18 @@
             <img src="assets/images/bantik1.jpg" alt="The White kitty with a pink bow"><br>
             The White Kitty With a Pink Bow
             <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
-            <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/bantik2.jpg" alt="The White kitty with a pink bow-2"><br>
             The White Kitty With a Pink Bow-2
             <p>Oil paint on canvas, size 20x20cm. 2021.</p>
-            <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/bantik3.jpg" alt="The White kitty with a pink bow-2"><br>
             The White Kitty With a Pink Bow-3
             <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
-            <hr>
         </div>
     </section><br>
 
@@ -156,20 +147,17 @@
             <img src="assets/images/belka-tulip.jpg" alt="The Squirrel with a tulip."><br>
             The Squirrel With a Tulip
             <p>Oil paint on canvas, size 20x30cm. 2021.</p>
-            <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/stroboscop.jpg" alt="The cat looking angry and serious"><br>
             Stop Music (My kitty dances with another cat)
             <p>Oil paint on canvas, size 25x35cm. 2021.</p>
-            <hr>
         </div>
         <div class="album">
             <img src="assets/images/tiger18x24.jpg" alt="The Tiger"><br>
             The Tiger
             <p>Oil paint on canvas, size 18x24cm. 2021.</p>
-            <hr>
         </div>
     </section><br>
 
@@ -180,21 +168,18 @@
             <img src="assets/images/tigercub.jpg" alt="The Tigercub"><br>
             The Tigercub
             <p>Oil paint on canvas, size 20x20cm. 2021. Juniva's copy of image from the Internet. Author is unknown.</p>
-            <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/hunter15x15.jpg" alt="The Kitty-hunter"><br>
             The Kitty-hunter
             <p>Oil paint on canvas, size 15x15cm. 2021.</p>
-            <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/hunter20x20.jpg" alt="The Kitty-hunter-2"><br>
             The Kitty-hunter-2
             <p>Oil paint on canvas, size 20x20cm. 2021.</p>
-            <hr>
         </div>
     </section><br>
 
@@ -205,21 +190,18 @@
             <img src="assets/images/kitten1.jpg" alt="The Grey kitten-1"><br>
             The Kitten-1
             <p>Oil paint on canvas, size 18x24cm. 2021.</p>
-            <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/kitten2.jpg" alt="The Grey kitten-2"><br>
             The Kitten-2
             <p>Oil paint on canvas, size 20x30cm. 2021.</p>
-            <hr>
         </div>
 
         <div class="album">
             <img src=" assets/images/kitten3.jpg" alt="The Grey kitten-3"><br>
             The Kitten-3
             <p>Oil paint on canvas, size 18x24cm. 2021.</p>
-            <hr>
         </div>
     </section><br>
 
@@ -230,7 +212,6 @@
             <img src="assets/images/cat.jpg" alt="The cat with blue eyes in watercolor"><br>
             The Cat
             <p>Watercolor on paper, size 30x44cm. 1982.</p>
-            <hr>
         </div>
 
         <div class="album">
@@ -238,14 +219,12 @@
             The Smiling Cat
             <p>Oil paint, canvas on cardboard, size 10x15cm. 2021. Juniva's copy of image from the Internet. Author is
                 unknown.</p>
-            <hr>
         </div>
         <div class="album">
             <img src="assets/images/toshka.jpg" alt="Toshka the Marmot"><br>
             Toshka the Marmot
             <p>Oil paint on canvas, size 15x20cm. Toshka the Marmot has own channel on <a
                     href="http://youtu.be/_9eOswLg5mQ" target="_blank" rel="noopener">Youtube</a></p>
-            <hr>
         </div>
     </section><br>
 
@@ -255,23 +234,22 @@
 
         <div class="album">
             <img src="assets/images/belka-win.jpg" alt="The Squirrel in Winter"><br>
-            The Winter Squirrel 
+            The Winter Squirrel
             <p>Oil paint on canvas, size 35x45cm. 2022.</p>
-            <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/red-ball.jpg" alt="The Kitten with a red ball"><br>
             The Red Ball
             <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
-            <hr>
         </div>
     </section><br>
 
     <div class="text-center">
         <p>That is all so far. 😉 </p><br>
 
-        <a href="index.html" aria-label="Go to the top of the home page "><i class="fa-solid fa-arrow-up-long"></i>To the Top of the Page<i class="fa-solid fa-arrow-up-long"></i> </a>
+        <a href="index.html" aria-label="Go to the top of the home page "><i class="fa-solid fa-arrow-up-long"></i>To
+            the Top of the Page<i class="fa-solid fa-arrow-up-long"></i> </a>
     </div>
 
     <!--  Footer the same as on the main page -->
