--- a/animals.html
+++ b/animals.html
@@ -248,7 +248,7 @@
     <div class="text-center">
         <p>That is all so far. 😉 </p><br>
 
-        <a href="index.html" aria-label="Go to the top of the home page "><i class="fa-solid fa-arrow-up-long"></i>  To
+        <a href="animals.html" aria-label="Go to the top of the home page "><i class="fa-solid fa-arrow-up-long"></i>  To
             the Top of the Page  <i class="fa-solid fa-arrow-up-long"></i> </a>
     </div>
 
