Add phone number to contacts

--- a/animals.html
+++ b/animals.html
@@ -258,7 +258,7 @@
         <div class="text-center">
             Copyright &copy; Juniva 1981-2022.<br>
             Contact us : <br>
-            Phone: 012 345 6789 | Email: juniva@juniva.net <br>
+            Phone: +353 83 085 0655  | Email: juniva@juniva.net <br>
             <a href="https://facebook.com/" target="_blank" rel="noopener"
                 aria-label="Go to Facebook (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             &nbsp;&nbsp;&nbsp;&nbsp;
