Add paintings to Animals album

--- a/animals.html
+++ b/animals.html
@@ -44,6 +44,32 @@
         </nav>
     </header>
 
+    
+    <!--  0th row of animal paintings -->
+
+    <section class="clear">
+        <div class="container">
+            <div class="album">
+                <img src="assets/images/pizza.jpg" alt="A cat and a pizza"><br>
+                The Temptation
+                <p>Oil paint on canvas, size 20x20cm. 2023.</p>
+
+            </div>
+
+            <div class="album">
+                <img src="assets/images/goal.jpg" alt="A cat looks at you"><br>
+                See the goal - ignore the obstacles!
+                <p>Oil paint on canvas, size 20x20cm. 2023.</p>
+
+            </div>
+            <div class="album">
+                <img src="assets/images/buter.jpg" alt="A cat and a sandwich"><br>
+                Another Temptation
+                <p>Oil paint on canvas, size 20x20cm. 2023.</p>
+
+            </div>
+        </div>
+    </section>
     <!--  1st row of animal paintings -->
 
     <section class="clear">
