--- a/animals.html
+++ b/animals.html
@@ -147,12 +147,18 @@
 
     <section class="container">
 
+         <div class="album">
+            <img src="assets/images/kitten2.jpg" alt="The Grey kitten-2"><br>
+            The Kitten-2
+            <p>Oil paint on canvas, size 20x30cm. 2021.</p>
+        </div>
+ <!--
         <div class="album">
             <img src="assets/images/bantik1.jpg" alt="The White kitty with a pink bow"><br>
             The White Kitty With a Pink Bow
             <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
         </div>
-
+ -->
         <div class="album">
             <img src="assets/images/bantik2.jpg" alt="The White kitty with a pink bow-2"><br>
             The White Kitty With a Pink Bow-2
