--- a/animals.html
+++ b/animals.html
@@ -152,19 +152,25 @@
             The Kitten-2
             <p>Oil paint on canvas, size 20x30cm. 2021.</p>
         </div>
- <!--
+
+         <div class="album">
+            <img src="assets/images/hunter20x20.jpg" alt="The Kitty-hunter-2"><br>
+            The Kitty-hunter-2
+            <p>Oil paint on canvas, size 20x20cm. 2021.</p>
+        </div>
+ <!-- tsih dvoh kotiv ne vydno bude
         <div class="album">
             <img src="assets/images/bantik1.jpg" alt="The White kitty with a pink bow"><br>
             The White Kitty With a Pink Bow
             <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
         </div>
- -->
+
         <div class="album">
             <img src="assets/images/bantik2.jpg" alt="The White kitty with a pink bow-2"><br>
             The White Kitty With a Pink Bow-2
             <p>Oil paint on canvas, size 20x20cm. 2021.</p>
         </div>
-
+ -->
         <div class="album">
             <img src="assets/images/bantik3.jpg" alt="The White kitty with a pink bow-2"><br>
             The White Kitty With a Pink Bow-3
@@ -202,20 +208,20 @@
             <p>Oil paint on canvas, size 20x20cm. 2021. Juniva's copy of image from the Internet. Author is unknown.</p>
         </div>
 
+         <div class="album">
+            <img src="assets/images/belka-win.jpg" alt="The Squirrel in Winter"><br>
+            The Winter Squirrel
+            <p>Oil paint on canvas, size 35x45cm. 2022.</p>
+        </div>
+        
         <div class="album">
             <img src="assets/images/hunter15x15.jpg" alt="The Kitty-hunter"><br>
             The Kitty-hunter
             <p>Oil paint on canvas, size 15x15cm. 2021.</p>
         </div>
-
-        <div class="album">
-            <img src="assets/images/hunter20x20.jpg" alt="The Kitty-hunter-2"><br>
-            The Kitty-hunter-2
-            <p>Oil paint on canvas, size 20x20cm. 2021.</p>
-        </div>
     </section><br>
 
-    <!--  7th row of animal paintings -->
+    <!--  7th row of animal paintings with grey kittens commented
 
     <section class="container">
         <div class="album">
@@ -236,7 +242,7 @@
             <p>Oil paint on canvas, size 18x24cm. 2021.</p>
         </div>
     </section><br>
-
+    --> 
     <!--  8th row of animal paintings -->
 
     <section class="container">
@@ -260,22 +266,7 @@
         </div>
     </section><br>
 
-    <!--  9th row of animal paintings -->
-
-    <section class="container">
-
-        <div class="album">
-            <img src="assets/images/belka-win.jpg" alt="The Squirrel in Winter"><br>
-            The Winter Squirrel
-            <p>Oil paint on canvas, size 35x45cm. 2022.</p>
-        </div>
-
-        <div class="album">
-            <img src="assets/images/red-ball.jpg" alt="The Kitten with a red ball"><br>
-            The Red Ball
-            <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
-        </div>
-    </section><br>
+     <br>
 
     <div class="text-center">
         <p>That is all so far. 😉 </p><br>
